# voxposer-ros

src/airsim_ros_pkgs/: CMakeLists.txt  package.xml
src/drif_ros_wrapper/: CMakeLists.txt  package.xml
src/drif_ros_wrapper/scripts/: airsim_ros_wrapper.py
